[gd_scene load_steps=20 format=2]

[ext_resource path="res://Torrent/TEXTURE/BaseAnimation.png" type="Texture" id=1]
[ext_resource path="res://Torrent/Torrent.gd" type="Script" id=2]
[ext_resource path="res://Torrent/TEXTURE/MuzzelAnimation.png" type="Texture" id=3]
[ext_resource path="res://Torrent/SFX/Anticipation_sfx.ogg" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 21, 22 )

[sub_resource type="Animation" id=2]
resource_name = "anticipation"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("base:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 14, 17 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Weapon/muzzel:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 14, 17 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "StartAnticipation"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "default"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("base:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 13 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Weapon/muzzel:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 13 ]
}

[sub_resource type="Animation" id=4]
resource_name = "shoot"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("base:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 14, 21 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Weapon/muzzel:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 18, 21 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "shoot"
} ]
}

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "anticipation"

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "default"

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "shoot"

[sub_resource type="AnimationNodeStateMachineTransition" id=8]

[sub_resource type="AnimationNodeStateMachineTransition" id=9]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=10]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=11]

[sub_resource type="AnimationNodeStateMachine" id=12]
states/anticipation/node = SubResource( 5 )
states/anticipation/position = Vector2( 364, 45 )
states/default/node = SubResource( 6 )
states/default/position = Vector2( 136, 45 )
states/shoot/node = SubResource( 7 )
states/shoot/position = Vector2( 364, 141 )
transitions = [ "default", "anticipation", SubResource( 8 ), "anticipation", "shoot", SubResource( 9 ), "shoot", "anticipation", SubResource( 10 ), "anticipation", "default", SubResource( 11 ) ]
start_node = "default"
graph_offset = Vector2( 50, 12 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=13]

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 1, 0.258824, 0.258824, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="Torrent" type="KinematicBody2D"]
use_parent_material = true
collision_layer = 4
collision_mask = 9
script = ExtResource( 2 )
__meta__ = {
"_editor_description_": "Stationary"
}

[node name="base" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 22
frame = 4

[node name="World_collision" type="CollisionShape2D" parent="."]
position = Vector2( 1, 5 )
shape = SubResource( 1 )

[node name="Weapon" type="Node2D" parent="."]
rotation = 4.71238

[node name="muzzel" type="Sprite" parent="Weapon"]
rotation = -3.14159
texture = ExtResource( 3 )
hframes = 22
frame = 4

[node name="MuzzelPosition" type="Position2D" parent="Weapon"]
position = Vector2( 40, -3.9999 )

[node name="AimDirection" type="RayCast2D" parent="Weapon"]
rotation = -3.14159
enabled = true
cast_to = Vector2( -200, 0 )
collision_mask = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/anticipation = SubResource( 2 )
anims/default = SubResource( 3 )
anims/shoot = SubResource( 4 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 12 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 13 )

[node name="direction_indicator" type="Line2D" parent="."]
position = Vector2( -15, -4.405 )
points = PoolVector2Array( 15, 4.405, -385, 4.405 )
width = 1.0
default_color = Color( 1, 0, 0, 0 )

[node name="TargetDetector" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="TargetDetector"]
position = Vector2( 7.62939e-06, -1.55885 )
scale = Vector2( 1.5625, 1.50735 )
polygon = PoolVector2Array( 0, 8, -128, 8, 128, 8, 128, -40, 96, -88, 56, -120, 0, -128, -56, -120, -104, -88, -128, -40, -128, 8 )

[node name="TargetDirection" type="RayCast2D" parent="."]
modulate = Color( 0.219608, 1, 0, 1 )
cast_to = Vector2( 139, 0 )
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="."]
margin_left = -21.0
margin_top = -40.0
margin_right = 19.0
margin_bottom = -26.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Anticipation" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="Visual" type="Node2D" parent="."]

[node name="HealthBar" type="ProgressBar" parent="Visual"]
margin_left = -5.0
margin_top = -49.0
margin_right = 20.0
margin_bottom = -43.0
rect_scale = Vector2( 0.5, 0.5 )
custom_styles/fg = SubResource( 14 )
custom_styles/bg = SubResource( 15 )
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="TargetDetector" to="." method="_on_Target_body_entered"]
[connection signal="body_exited" from="TargetDetector" to="." method="_on_Target_body_exited"]
[connection signal="finished" from="Anticipation" to="." method="_on_AnticipationSFX_finished"]
